unpackaged/main/default/objects/Content_Version_Review__c/Content_Version_Review__c.object-meta.xml
<CustomObject>
    <label>Content Version Review</label>
    <nameField>
        <label>Version Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Version Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>