unpackaged/main/default/objects/Content_Version_Review__c/fields/Content_Review_Owner__c.field-meta.xml
<CustomField>
    <fullName>Content_Review_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Review Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>startsWith</operation>
            <value>0124A0000010uLO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Content Version Review</relationshipLabel>
    <relationshipName>Content_Version_Review</relationshipName>
    <type>Lookup</type>
</CustomField>