unpackaged/main/default/objects/Content_Version_Review__c/fields/NCM_Content_Request__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Content Request</label>
    <referenceTo>NCM_Content_Request__c</referenceTo>
    <relationshipLabel>Content Version Review</relationshipLabel>
    <relationshipName>Content_Version_Review</relationshipName>
    <type>Lookup</type>
</CustomField>