unpackaged/main/default/objects/Content_Version_Review__c/fields/NCM_Content_Version__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content_Version__c</fullName>
    <label>NCM Content Version</label>
    <referenceTo>NCM_Content_Version_SubRecord__c</referenceTo>
    <relationshipLabel>Content Version Review</relationshipLabel>
    <relationshipName>Content_Version_Review</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>