unpackaged/main/default/objects/Content_Version_Review__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Content Version Review (Requestor Name)</relationshipLabel>
    <relationshipName>Content_Version_Review1</relationshipName>
    <type>Lookup</type>
</CustomField>