unpackaged/main/default/objects/Content_Version_Review__c/fields/Review_Begins__c.field-meta.xml
<CustomField>
    <fullName>Review_Begins__c</fullName>
    <label>Review Begins</label>
    <type>Date</type>
</CustomField>