unpackaged/main/default/objects/Content_Version_Review__c/fields/Review_End__c.field-meta.xml
<CustomField>
    <fullName>Review_End__c</fullName>
    <label>Review Ends</label>
    <type>Date</type>
</CustomField>