unpackaged/main/default/objects/Content_Version_Review__c/fields/Review_Ends__c.field-meta.xml
<CustomField>
    <fullName>Review_Ends__c</fullName>
    <formula>CASE( 
MOD( Review_Begins__c - DATE(1900, 1, 7), 7), 
0, (Review_Begins__c ) + 5+ FLOOR((5-1)/5)*2, 
1, (Review_Begins__c ) + 5+ FLOOR((5)/5)*2, 
2, (Review_Begins__c ) + 5+ FLOOR((5+1)/5)*2, 
3, (Review_Begins__c ) + 5+ FLOOR((5+2)/5)*2, 
4, (Review_Begins__c ) + 5+ FLOOR((5+3)/5)*2, 
5, (Review_Begins__c ) + 5+ CEILING((5)/5)*2, 
6, (Review_Begins__c ) - IF(5&gt; 0,1,0) + 5+ CEILING((5)/5)*2, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Ends Deprecated</label>
    <type>Date</type>
</CustomField>