unpackaged/main/default/objects/Content_Version_Review__c/fields/Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>Review_Summary__c</fullName>
    <label>Review Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>