unpackaged/main/default/objects/Content_Version_Review__c/fields/Version_Review_Code__c.field-meta.xml
<CustomField>
    <fullName>Version_Review_Code__c</fullName>
    <displayFormat>CVR-{000000}</displayFormat>
    <label>Version Review (Code)</label>
    <type>AutoNumber</type>
</CustomField>