unpackaged/main/default/objects/Content_Version_Review__c/recordTypes/Proofing.recordType-meta.xml
<RecordType>
    <fullName>Proofing</fullName>
    <active>true</active>
    <label>Proofing</label>
</RecordType>