unpackaged/main/default/objects/Content_Version_Review__c/recordTypes/Voting.recordType-meta.xml
<RecordType>
    <fullName>Voting</fullName>
    <active>true</active>
    <label>Voting</label>
</RecordType>