unpackaged/main/default/objects/Content_Version_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Content_Review_Owner__c</columns>
    <columns>NCM_Content_Request__c</columns>
    <columns>NCM_Content_Version__c</columns>
    <columns>Review_Begins__c</columns>
    <columns>Review_Ends__c</columns>
    <columns>Review_Summary__c</columns>
    <columns>Version_Review_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>